Footer overflow fixed

--- a/style/index.css
+++ b/style/index.css
@@ -86,6 +86,7 @@ html{
 	font-size: 1.2em;
 }
 #footer{
+	overflow-x: auto;
 	background: var(--bg);
 }
 #sub-footer-wrapper{
@@ -322,6 +323,9 @@ html{
 	border: 1px solid rgb(0,255,255);
 	outline: 1px dashed rgb(0,255,255);
 	outline-offset: .5em;
+}
+#progress-bar-wrapper{
+	min-width: 8em;
 }
 #progress-bar{
 	width: 100%;
